------------------------------------------------------------------------
r2093 | gaser | 2022-08-18 11:53:37

Changed paths:
 M CHANGES.txt
 M cat_plot_boxplot.m
 M cat_plot_scatter.m


Chamged: Many changed to cat_plot_scatter.m:
           - added new options to set color and fontsize and to save plot as image
           - changed default setting for 'filled' and also changed syntax to be 
             more compatible to scatter function
           - confodence interval is not plotted with transparency and some more 
             space to corners
Changed: Corrected order of colors for horizontal violin plot and corrected slight 
         skew of density plot.
------------------------------------------------------------------------
r2092 | gaser | 2022-08-16 23:25:04

Changed paths:
 M CHANGES.txt
 M cat_surf_results.m


Fixed: Corrected some issues with datatip and coorbar in cat_surf_results.m.
------------------------------------------------------------------------
r2091 | gaser | 2022-08-16 18:10:01

Changed paths:
 M CHANGES.txt
 M cat_plot_boxplot.m
 M cat_plot_scatter.m
 M cat_surf_results.m
 M cat_vol_slice_overlay.m


Changed: Added dark color mode to cat_plot_boxplot.m.
Changed: Updated handling of different designs in cat_surf_results.m.
------------------------------------------------------------------------
r2090 | gaser | 2022-08-16 15:37:42

Changed paths:
 M CHANGES.txt
 M cat_io_volctype.m
 M cat_io_xml.m
 M cat_plot_histogram.m
 M cat_stat_check_SPM.m
 M cat_stat_homogeneity.m
 M cat_surf_results.m
 M cat_vol_slice_overlay.m
R  cg_create_MPM.m -> internal/cg_create_MPM.m
R  cg_io_send_to_server.m -> internal/cg_io_send_to_server.m


Changed: Changed some function back to use of spm_progress_bar where calls are 
         made during preprocessing.
Changed: Set cat_plot_scatter to defined figure in cat_plot_histogram to 
         prevent opening of new windows.
Changed: Added mask field SPM.xM to cat_stat_check_SPM to allow masking for